# LinguaBoost

./: .dockerignore  .gitignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
.specify/memory/: constitution.md
deploy/: bothost.md
scripts/: docker-entrypoint.sh
scripts/powershell/: tasks-to-github-issues.ps1
specs/001-telegram-language-bot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-telegram-language-bot/contracts/: openapi.yaml
src/linguaboost/: __init__.py  _bootstrap.py
src/linguaboost/adapters/: clock.py  config.py
src/linguaboost/app/: logging.py  main.py  state.py  webhook.py
src/linguaboost/bot/: dispatcher.py
src/linguaboost/bot/keyboards/: main_menu.py
src/linguaboost/bot/middlewares/: db_session.py
src/linguaboost/bot/routers/: start.py
src/linguaboost/domain/: user_service.py
src/linguaboost/infra/db/: models.py  session.py
src/linguaboost/infra/db/migrations/: env.py
src/linguaboost/infra/db/migrations/versions/: 202604221400_initial_schema.py  202604231500_sqlite_initial.py
src/linguaboost/infra/redis/: client.py
src/linguaboost/infra/repositories/: telegram_dedup.py  user_repository.py
tests/unit/: test_user_onboarding_service.py  test_webhook_dedup.py
