[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "linguaboost"
version = "0.1.0"
description = "LinguaBoost"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "LinguaBoost contributors" }]
keywords = ["language", "learning"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "aiogram>=3.15",
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30",
  "alembic>=1.14",
  "redis[hiredis]>=5.2",
  "apscheduler>=3.10.4",
  "pydantic-settings>=2.6",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "httpx>=0.27",
  "ruff>=0.6",
  "psycopg[binary]>=3.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/linguaboost"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
